# essentials-of-c-

./: CMakeLists.txt  MemoryAlocation.cpp  MemoryAlocation.h  REVISION.cpp  REVISION.h  STL.cpp  STL.h  algorithms.cpp  algorythms.h  arrays.cpp  arrays.h  main.cpp  pointers.cpp  pointers.h  solution.cpp  solution.h  vectors.cpp  vectors.h
